--- a/index.html
+++ b/index.html
@@ -113,19 +113,15 @@
                 <h2 class="reveal">Travel and Stay</h2>
                 <div class="stay-container reveal">
                     <div class="stay-item">
-                        <h3>01. <br>
-                            Getting There
-                        </h3>
+                        <h3><span class="stay-number">01.</span> Getting There</h3>
                         <div class="text">Easy-to-follow <br> directions to the venue</div>
                         <!--div class="text links">MAP & DETAILS</div-->
                         <a class="text links" href="https://www.google.com/maps/place/Shree+Kailash+Mahal,+Ambattur/@13.1072598,80.1538922,17z" target="_blank">
                             MAP & DETAILS
                           </a>
                     </div>
-                    <div class="stay-item">
-                        <h3>02. <br>
-                            Once You're There
-                        </h3>
+                    <div class="stay-item">                            
+                            <h3><span class="stay-number">02.</span> Once You're There</h3>
                         <div class="text">Some fun things to do in <br> the area</div>
                         <!--div class="text links">OUR RECOMMENDATIONS</div-->
                         <a class="text links" href="https://www.tripadvisor.in/Attractions-g304556-Activities-Chennai_Madras_Chennai_District_Tamil_Nadu.html" target="_blank">
@@ -133,10 +129,9 @@
                           </a>
                     </div>
                     <div class="stay-item">
-                        <h3>03. <br>
-                            Where to Stay
-                        </h3>
+                        <h3><span class="stay-number">03.</span> Where to Stay</h3>
                         <div class="text">Hotels and B&Bs <br> to check out</div>
+                        
                         <!--div class="text links">LODGING OPTIONS</div-->
                         <a class="text links" href="https://www.booking.com/searchresults.html?ss=Ambattur%2C+Chennai%2C+India&checkin_year=2025&checkin_month=9&checkin_monthday=10&checkout_year=2025&checkout_month=9&checkout_monthday=12" target="_blank">
                             LODGING OPTIONS
